--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple react app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start"
   },
   "keywords": [],
   "author": "Caio Lopes",
@@ -29,6 +29,14 @@
     "eslint": "^3.12.2",
     "eslint-config-google": "^0.7.1",
     "eslint-plugin-react": "^6.8.0",
+    "expect": "^1.20.2",
+    "karma": "^1.4.1",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.2",
+    "mocha": "^3.2.0",
     "node-sass": "^4.3.0",
     "sass-loader": "^4.1.1",
     "script-loader": "^0.7.0",
