--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Simple react app",
   "main": "server.js",
   "scripts": {
+    "build": "webpack",
+    "watch": "webpack -w",
     "test": "karma start"
   },
   "keywords": [],
